merul_Dev/src/objects/FeatureDemo__c.object
<CustomObject>
    <fields>
        <fullName>FeatureDemo__c</fullName>
        <description>Is a Feature Name</description>
        <label>FeatureName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Mandatory__c</fullName>
        <label>Optional/Mandatory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentFeature</label>
        <referenceTo>FeatureDemo__c</referenceTo>
        <relationshipLabel>FeatureDemos</relationshipLabel>
        <relationshipName>FeatureDemos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>checkBox_status__c</fullName>
        <label>checkBox status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>FeatureDemo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FeatureDemo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FeatureDemos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>